--- a/Frontend/src/landing_page/Signup/Login.css
+++ b/Frontend/src/landing_page/Signup/Login.css
@@ -12,7 +12,7 @@
     border-radius: 4px;
 }
 
-.l-btn{
+.l-btn {
     width: 100%;
     height: 2.3rem;
     border-radius: 2px;
@@ -21,7 +21,7 @@
     color: white;
 }
 
-.l-btn:hover{
+.l-btn:hover {
     background-color: #2e81e6;
     color: white;
 }
@@ -31,12 +31,18 @@
     padding-top: 3rem;
 }
 
-.login-box input::placeholder{
+.login-box input::placeholder {
     color: rgba(0, 0, 0, 0.478)
 }
 
 .login-box input {
     height: 2.5rem;
     border: 1px solid rgba(132, 131, 131, 0.231);
-    border-radius: 2px ;
+    border-radius: 2px;
+}
+
+.login-alert {
+    width: 30%;
+    margin: auto;
+    margin-top: 2rem;
 }
